README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+
+```
+#!python
+
 #Usage
 ПЕРЕПИСАТЬ !!!!!
 
@@ -59,3 +63,4 @@ Add your content here. Format your content with:
 Text in bold or italic
 Headings, paragraphs, and lists
 Automatic links to other wiki pages
+```
