--- a/README
+++ b/README
@@ -1,110 +1,86 @@
-Установка компонентов 
+Зависимости 
+python 2.7+
+Zabbix 2.4+
+asterisk 1.8+
+argparse 1.2.1+
+pexpect 3.3+
+posix-ipc 0.9.9+
+wsgiref 0.1.2+
+
+**Install python modules:**
+
+```
+#!python
+
+aptitude install python-pip
+pip install argparse pexpect posix-ipc wsgiref
+
+```
+**get asterisk-zabbix**
+
+```
+#!python
+cd /etc/zabbix/
+git clone https://pbxware@bitbucket.org/pbxware/asterisk-zabbix-py.git
+cd asterisk-zabbix-py
+```
+**Edit settings.py**
+
+```
+#!python
+# coding=utf-8
+HOST = "localhost"
+PORT = "5038"
+USERNAME = "zabbix" 
+PASSWORD = "zabbixpasswordami"
+DEFAULT_TIMEOUT = 3
+AMI_VERSION = "1.3"
+```
+Use "telnet localhost 5038" for get AMI version
+
+Modify /etc/asterisk/manager.conf and include this block.
 
 
-Настрйока Asterisk 
-добавить в manager.conf 
-
-[zabbix]
-secret=zabbixsecpass
+```
+#!python
+[zabbix] ; username from settings.py
+secret=zabbixpasswordami ; password from settings.py
 deny=0.0.0.0/0.0.0.0
-permit=127.0.0.1/255.255.255.255
+permit=127.0.0.1/255.255.255.0
 read = system,call,log,verbose,agent,user,config,dtmf,reporting,cdr,dialplan
-write = agent,user,command,reporting
+write = system,call,agent,user,command,reporting,message
 allowmultiplelogin = yes
 displayconnects = no
 writetimeout = 100
-
-secret поменять как и в файле settings.py 
-
-
-
-#Usage
-Настройки по умолчанию находятся в settings.py
-Необходимо создать файл local_settings.py и указать в нем настройки подключения
- HOST = ""
- PORT = ""
- USERNAME = ""
- PASSWORD = ""
-
-Зависимости проекта находятся в файле freeze
-
-Доступные команды:
- ./run.py <command> -a                                         Discovery.
- ./run.py <command> -f <field_name> -p <param>                 Return the param of the field
- ./run.py <command> -f <field_name> -p <param> -r <regex>      Regular expression for field value. (Return group 1)
-
-command - название команды
-param - параметр фильтрации
-field_name - название возвращаемого параметра
-regex - регулярное выражение применяемое к возвращаемому результату
-
-
-
-
-
-
-
-
-
-
-ПЕРЕПИСАТЬ !!!!!
-
-
-Introduction
-This script fetches values from Asterisk using the Asterisk Manager Interface (AMI) and presents them to Zabbix.
-
-Python is required.
-
-Requires
-Python 2.4+ Asterisk 1.6+ Zabbix 1.4+
-
-Making it work
-Asterisk
-Modify /etc/asterisk/manager.conf and include this block.
-
-[zabbix]
-secret=password
-deny=0.0.0.0/0.0.0.0
-permit=127.0.0.1/255.255.255.0
-read = system,call,log,verbose,command,agent,user
-write = system,call,log,verbose,command,agent,user
+```
 Please change the password, and then restart asterisk.
 
-Script Install
-Ensure that you have the necessary packages, download the script and place it wherever you want to. (RIZ, update the link!) I chose to put it in /etc/zabbix. Set it's permissions to run for all users.
-
-sudo easy_install posix_ipc
-sudo easy_install pexpect
-# Download the py file into /etc/zabbix/zasterisk.py
-
-chmod a+x /etc/zabbix/zasterisk.py
-Edit the first line of zasterisk.py from #!/usr/bin/python2.6 to the location of the Python interpreter on your machine. Set the password to whatever you set it in the Asterisk step.
-
-Before you go any further, test the script to see if it works for you.
-
-/etc/zabbix/zasterisk.py --channelsactive
-Continue forward only if you get a proper result, otherwise stop here and debug. (Delete the zasterisk file in /dev/shm after testing, else you'll have perms problems.)
-
-Zabbix Agent
-Add the following lines to your Zabbix Agent config.
-
-UserParameter=asterisk.activeskypechannels,/etc/zabbix/zasterisk.py --skypeactive
-
-UserParameter=asterisk.activecalls,/etc/zabbix/zasterisk.py --callsactive
-UserParameter=asterisk.activechannels,/etc/zabbix/zasterisk.py --channelsactive
-UserParameter=asterisk.totalskypechannels,/etc/zabbix/zasterisk.py --skypelicense
-UserParameter=asterisk.activeg729encoders,/etc/zabbix/zasterisk.py --g729activeenc
-UserParamater=asterisk.activeg729decoders,/etc/zabbix/zasterisk.py --g729activedec
-UserParameter=asterisk.totalg729channels,/etc/zabbix/zasterisk.py --g729license
+Add the following lines to your Zabbix Agent config. (zabbix_agentd.conf)
+```
+#!python
+Include=/etc/zabbix/asterisk-zabbix-py/userparameter_asterisk.conf
+```
 Restart your Zabbix agent.
 
-Zabbix Server
-TODO, setup graphs, items, triggers.
+#Usage
 
-Details
+Available commands:
+ channel - CoreShowChannels
+ member - SIP member
+ peer - SIP peers
+ ping - ping/pong.
+ queue - SIP queue
+ registry - SIP registrations
 
-Add your content here. Format your content with:
+Parameters 
+ ./run.py <command> -a  Discovery.
+ ./run.py <command> -f <field_name> -p <param>                 Return the param of the field
+ ./run.py <command> -f <field_name> -p <param> -r <regex>      Regular expression for field value. (Return group 1)
+ ./run.py <command> -v Verbose
 
-Text in bold or italic
-Headings, paragraphs, and lists
-Automatic links to other wiki pages
+Examples:
+
+sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py registry -a  Return all SIP Registrations 
+sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py registry -a  Return all SIP Peers 
+sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py peer -f Address-IP -p 101 Return ip address peer 101 
+sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py peer -f Status -r "(\d+)" -p 101   Return Qualify user 101 
