--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Dependency:          
-python 2.7+     
+python 2.6+     
 python-all-dev     
 Zabbix 2.4+    
 asterisk 1.8+    
@@ -31,7 +31,7 @@ pip install argparse pexpect posix-ipc wsgiref
 ```
 #!python
 cd /etc/zabbix/
-git clone https://pbxware@bitbucket.org/pbxware/asterisk-zabbix-py.git
+git clone https://SimakinK@bitbucket.org/SimakinK/asterisk-zabbix.git
 cd asterisk-zabbix-py
 ```
 **Edit settings.py**
@@ -101,6 +101,7 @@ Examples:
 #!python
 
 sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py registry -a  Return all SIP Registrations 
+sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py iax2 -a  Return all IAX2 Peers
 sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py peer -a  Return all SIP Peers 
 sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py peer -f Address-IP -p 101 Return ip address peer 101 
 sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py peer -f Status -r "(\d+)" -p 101   Return Qualify user 101
