--- a/README
+++ b/README
@@ -107,5 +107,5 @@ sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py iax2 -a  f Status -r "(\w+)
 sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py peer -a  Return all SIP Peers 
 sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py peer -f Address-IP -p 101 Return ip address peer 101 
 sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py peer -f Status -r "(\d+)" -p 101   Return Qualify user 101
-sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py peer -f Status -r "(\w+)" -p 101   Return Qualify user 101
+sudo -u zabbix /etc/zabbix/asterisk-zabbix-py/run.py peer -f Status -r "(\w+)" -p 101   Return Status user 101
 ```
